# kr-by-claude

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  achart_v3_speed_report.md  pyproject.toml
api/: deps.py  main.py
api/routers/: classifications.py  cron.py  heatmap.py  index.py  indicators.py  market_context.py  performance.py  pipelines.py  positions.py  prompts.py  render.py  runner.py  runs.py  signals.py  (+2 more)
data/: weekend_classified_20260601.csv
docs/: PROJECT_ROADMAP.md  analyze_chart_inline_rollback.md  llm-backfill-설명.html  pivot-reanalysis-tradeoff.md  trading-rules-book-verified.md
prompts/: analyze_chart_v3.md  calculate_entry_params_v2_0.md  evaluate_pivot_trigger_v1.md  verify_analysis_v1.md
scripts/: backtest_2024_analysis.sql  bt_backfill_loop.sh  bt_backfill_loop_c.sh  bt_watchdog_c.sh  cron.example  draw_sample_b.py  draw_sample_c.py  entry_params_parity.py  explore_entry_phase.py  explore_winner_profile.py  export_thresholds.py  issue2_control_prescreen.py  issue2_h1_audit.py  issue2_h2_gate_sim.py  issue45_premeasure.py  issue55_dist_replay.py  issue68_dart_probe.py  issue68_eps_crosscheck.py  issue68_fs2_observe.py  issue68_stage4_explore.py  monitor_classification_drift.py  p2_1a_replay.py  regression_phase1_2a.py  remeasure_phase2i.py  replay_bfw_e2e.py  replay_breakout_from_watch.py  stage0_5b_gonow_probe.py  stage0_5b_llm_sample.py  stage0_layer2_readout.py  stage0_replay_5b_gates.py  stage0_replay_a_precompute.py  stage2_e1_indeterminacy.py  stage3_replay_climax_topping.py  verify_005850_handle.py
tests/: conftest.py  test_abort_skip.py  test_api_chart_render.py  test_api_classifications.py  test_api_corporate_actions_builder.py  test_api_cron.py  test_api_csv_builder.py  test_api_deps_pool.py  test_api_freeze_store.py  test_api_index.py  test_api_indicators_by_sector.py  test_api_indicators_series.py  test_api_integrity_guard.py  test_api_market_context_builder.py  test_api_minervini_detail_builder.py  test_api_payload_builder.py  test_api_pipeline_detail.py  test_api_pipelines.py  test_api_positions.py  test_api_prompts_verify_frozen.py  test_api_routers.py  test_api_runner.py  test_api_runner_service.py  test_api_runs_summary.py  test_api_signals_performance.py  test_api_triggers.py  test_api_zip_builder.py  test_backfill_price_sanity.py  test_backtest_backfill.py  test_backtest_backfill_circuit_breaker.py  test_backtest_backfill_concurrency.py  test_backtest_classification_store.py  test_backtest_entry_variants.py  test_backtest_frozen_sample.py  test_backtest_frozen_sample_b.py  test_backtest_frozen_sample_c.py  test_backtest_load_watchlist_table.py  test_backtest_market_regime.py  test_backtest_phases.py  test_backtest_portfolio.py  (+112 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
(+516 files in other folders)
