[project]
name = "kr-pipeline"
version = "0.1.0"
description = "Korean stock daily OHLCV ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "pykrx>=1.2.8",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "setuptools>=69",  # pykrx imports pkg_resources at module load; uv does not inject setuptools by default, so we declare it explicitly
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: 실제 외부 IO (Postgres + pykrx)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
